src/styles/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* Scrollbar Track */
::-webkit-scrollbar {
  @apply bg-gray-100 dark:bg-gray-900 w-2
}
/* Scrollbar Thumb */
::-webkit-scrollbar-thumb {
  @apply bg-indigo-700 rounded-lg border border-solid border-gray-500 dark:border-gray-900 
}
/* Scrollbar Animation */
@keyframes scroll-pulse {
  0% {
    background-color: #1E40AF;
    border: 3px solid #111827;
  }
  50% {
    background-color: #ffcc00;
    border: 3px solid #ffcc00;
  }
  100% {
    background-color: #1E40AF;
    border: 3px solid #111827;
  }
}
/* Apply animation to scrollbar thumb on hover */
::-webkit-scrollbar-thumb:hover {
  animation: scroll-pulse 3s infinite;
}
/* 
.light-scrollbar::-webkit-scrollbar {
  @apply w-[8px] bg-gray-100
}
.dark-scrollbar::-webkit-scrollbar {
  @apply w-[8px] bg-gray-800
} */

body.dark {
  --primary: #111827;
  --text-main: white;
}

body.light {
  --primary: white;
  --text-main: #111827;
}

.ais-SearchBox-input {
  @apply w-full py-3.5 pr-4 bg-gray-200 dark:bg-gray-900  text-gray-700 dark:text-gray-50 focus:outline outline-none border-none;
}

.ais-SearchBox-resetIcon{
  @apply hidden;
}

.ais-SearchBox-submit{
  @apply hidden;
}

.ais-Highlight-highlighted{
  @apply text-indigo-400 bg-indigo-500
}
.ais-SearchBox-loadingIndicator{
  @apply hidden
}

.animate__fast{
  --animate-duration: 0.3s;
}

